# light-locker

./: .cvsignore  .gitignore  AUTHORS  COPYING.LIB  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  gnome-screensaver.doap  meson.build  meson_options.txt  transifex-import  transifex-pull  transifex-push
data/: .cvsignore  .gitignore  Makefile.am  apps.light-locker.gschema.xml  apps.light-locker.gschema.xml.in.in  gnome-screensaver  gnome-screensaver-command.1  gnome-screensaver-preferences.1  gnome-screensaver-preferences.desktop.in  gnome-screensaver-preferences.glade  gnome-screensaver-preferences.ui  gnome-screensaver.1  gnome-screensaver.directory.in  gnome-screensaver.pc.in  gnome-screensaver.schemas.in  gnome-screensavers.menu.in  light-locker-command.1  light-locker.1  lock-dialog-default.glade  lock-dialog-default.ui  meson.build  org.freedesktop.ScreenSaver.xml  org.freedesktop.UPower.xml  org.gnome.ScreenSaver.service.in  org.gnome.screensaver.gschema.migrate  org.gnome.screensaver.gschema.xml.in.in  usr.bin.light-locker  xscreensaver-config.xsl
data/apparmor/: usr.bin.light-locker-command
data/glib-2.0/schemas/: apps.light-locker.gschema.xml
data/images/: Makefile.am
data/images/cosmos/: .gitignore  CREDITS  Makefile.am  background-1.xml  background-1.xml.in  cosmos.xml.in.in
doc/: .cvsignore  .gitignore  DBUS-API.txt  Makefile.am  dbus-interface.xml  docbook.css  gnome-screensaver.html  gnome-screensaver.xml.in  light-locker.xml.in
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_FR.po  fur.po  ga.po  gl.po  gu.po  (+59 more)
savers/: .cvsignore  .gitignore  Makefile.am  cosmos-slideshow.desktop.in.in  cosmos-slideshow.xml.in  floaters.c  footlogo-floaters.desktop.in.in  gs-theme-engine-marshal.list  gs-theme-engine.c  gs-theme-engine.h  gs-theme-window.c  gs-theme-window.h  gste-popsquares.c  gste-popsquares.h  gste-slideshow.c  gste-slideshow.h  personal-slideshow.desktop.in  personal-slideshow.desktop.in.in  personal-slideshow.xml  popsquares.c  popsquares.desktop.in  popsquares.desktop.in.in  popsquares.xml  slideshow.c  slideshow.xml  xdg-user-dir-lookup.c  xdg-user-dir-lookup.h
src/: .cvsignore  .gitignore  Makefile.am  bus.h  cc-screensaver-page.c  cc-screensaver-page.h  cc-screensaver-panel.c  cc-screensaver-panel.h  copy-theme-dialog.c  copy-theme-dialog.h  debug-screensaver.sh  dpms.c  dpms.h  fade.c  fade.h  file-transfer-dialog.c  file-transfer-dialog.h  gnome-screensaver-command.c  gnome-screensaver-dialog.c  gnome-screensaver-gl-helper.c  gnome-screensaver-preferences.c  gnome-screensaver.c  gnome-screensaver.desktop.in.in  gnome-screensaver.h  gs-auth-bsdauth.c  gs-auth-helper.c  gs-auth-pam.c  gs-auth-pwent.c  gs-auth.h  gs-bus.h  gs-content.c  gs-content.h  gs-debug.c  gs-debug.h  gs-fade.c  gs-fade.h  gs-grab-x11.c  gs-grab.h  gs-idle-monitor.c  gs-idle-monitor.h  (+57 more)
src/cut-n-paste/: Makefile.am  fusa-display-private.h  fusa-display.c  fusa-display.h  fusa-manager-private.h  fusa-manager.c  fusa-manager.h  fusa-user-menu-item.c  fusa-user-menu-item.h  fusa-user-private.h  fusa-user.c  fusa-user.h  fusa-utils.c  fusa-utils.h  gdm-queue.c  gdm-queue.h  gdmcomm.c  gdmcomm.h
